# New-Cab-booking-and-Cab-driver-backend

./: .gitignore  cabs-data.json  jomlah-cab-app-3db6da6994e5.json  manage.py  pyproject.toml  requirements.txt
JLP_MyRide/: asgi.py  celery.py  consumers.py  jomlah-cab-app-firebase-adminsdk.json  routing.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0003_phoneverify.py  (+53 more)
admin_api/: admin.py  models.py  serializers.py  urls.py  views.py
cabs/: admin.py  models.py  serializers.py  urls.py  views.py
chat/: admin.py  models.py  serializers.py  urls.py  views.py
couponcode/: admin.py  models.py  serializers.py  urls.py  views.py
notifications/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
payment/: admin.py  models.py  payment_fcm_notified.py  serializers.py  tasks.py  urls.py  views.py
referrance/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
sos/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
support/: admin.py  models.py  serializers.py  urls.py  views.py
trips/: admin.py  fcm_notified_task.py  models.py  notifications.py  serializers.py  signals.py  tasks.py  urls.py  views.py
utility/: fcm_notification.py  jomlah-cab-app-firebase-adminsdk-6alay-32a4d2af4c.json  model.py  nearest_driver_list.py  otp.py  pagination.py  permissions.py  rating.py  util.py
wallets/: admin.py  models.py  serializers.py  urls.py  views.py
(+192 files in other folders)
